oci/external-secrets-operator/policies/external-secrets-policy.yaml
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: external-secrets-webhook
  namespace: external-secrets
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: external-secrets-webhook
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: NetworkAuthentication
      name: kube-api-server
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: external-secrets-webhook-health
  namespace: external-secrets
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: external-secrets-webhook-health
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: NetworkAuthentication
      name: kubelet
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: external-secrets-cert-controller-health
  namespace: external-secrets
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: external-secrets-cert-controller-health
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: NetworkAuthentication
      name: kubelet
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: external-secrets-controller-health
  namespace: external-secrets
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: external-secrets-controller-health
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: NetworkAuthentication
      name: kubelet
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: proxy-admin
  namespace: external-secrets
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: proxy-admin
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: NetworkAuthentication
      name: kubelet
